--- a/static_questionnaires/assets/css/style.css
+++ b/static_questionnaires/assets/css/style.css
@@ -17,6 +17,22 @@ body {
     padding: 10px;
 }
 
+h2 {
+    text-align: center;
+}
+
 h3 {
     font-weight: bold;
+}
+
+footer {
+    text-align: center;
+    margin: 10px;
+}
+
+.answerChoices{
+    text-align: left;
+    font-size: 20px;
+    margin: 5px;
+    padding: 10px;
 }
