--- a/static_questionnaires/assets/css/style.css
+++ b/static_questionnaires/assets/css/style.css
@@ -19,6 +19,7 @@ body {
 
 h2 {
     text-align: center;
+    font-weight: bold;
 }
 
 h3 {
@@ -35,4 +36,12 @@ footer {
     font-size: 20px;
     margin: 5px;
     padding: 10px;
+}
+
+li {
+    list-style-type: circle;
+}
+
+ul {
+    margin-left: 25px;
 }
